--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -1,8 +1,9 @@
-.login {
+.chat {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 80vh;
 }
+
+/*# sourceMappingURL=Chat.css.map */
