--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,9 +1,10 @@
 .login {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100vh;
+  height: 80vh;
 }
 
 /*# sourceMappingURL=Login.css.map */
