--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -1,9 +1,16 @@
 .chat {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 80vh;
+}
+
+.message {
+  display: flex;
+  flex-direction: column;
+  width: 280px;
 }
 
 /*# sourceMappingURL=Chat.css.map */
