--- a/src/components/Chat/Chat.scss
+++ b/src/components/Chat/Chat.scss
@@ -1,7 +1,14 @@
 .chat {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
   height: 80vh;
+}
+
+.message {
+  display: flex;
+  flex-direction: column;
+  width: 280px;
 }
