--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -4,11 +4,15 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 80vh;
+  margin-top: 48px;
 }
 
 .user_list {
   list-style-type: none;
+  margin-top: 20px;
+  font-size: 48px;
+  font-weight: bold;
+  color: red;
 }
 
 /*# sourceMappingURL=Home.css.map */
