--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -4,9 +4,14 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 80vh;
+  margin-top: 48px;
 }
 
 .user_list {
   list-style-type: none;
+  margin-top: 20px;
+  font-size: 48px;
+  font-weight: bold;
+  color: red;
 }
+
