--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
-body {
+*{
+  padding: 0;
   margin: 0;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -15,5 +19,22 @@ code {
 ul {
   display: flex;
   justify-content: space-around;
+  width: 100%;
+}
+
+li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  background-color: #00C7C3;
+  height: 80px;
 }
 
