--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -2,15 +2,41 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  width: 100%;
+  width: 1080px;
   height: 80vh;
+  margin: 0 auto;
+}
+
+.message_list {
+  display: flex;
+  flex-direction: column-reverse;
+  width: 100%;
+  align-items: flex-end;
+  border-radius: 10px;
+  padding: 10px;
+  height: 90vh;
 }
 
 .message {
   display: flex;
   flex-direction: column;
-  width: 280px;
+  border-radius: 10px;
+  background-color: #6fa8dc;
+  color: #fff;
+  padding: 5px 15px 5px 10px;
+  width: fit-content;
+  min-width: 20%;
+  margin: 10px 0 0 0;
+  font-size: 14px;
+  line-height: 1.5;
+  box-sizing: border-box;
+  text-align: right;
+}
+
+.message_form {
+  display: flex;
+  width: 100%;
+  margin-top: 20px;
 }
 
 /*# sourceMappingURL=Chat.css.map */
